--- a/src/main/resources/templates/Frontend/Main/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/Main/Checkout.mustache
@@ -40,7 +40,7 @@
 </head>
 <body class="sb-nav-fixed">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="/Index">Index</a>
+    <a class="navbar-brand" href="/Index">Pikto</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
     </button>
     <!-- Navbar Search-->
@@ -74,50 +74,50 @@
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
 
-            <div class="sb-sidenav-menu">
-                <div class="profile-userpic">
-                    <img src="https://scontent.fbma2-1.fna.fbcdn.net/v/t1.0-9/17796707_10155264022745159_8129848447376750595_n.jpg?_nc_cat=111&ccb=2&_nc_sid=174925&_nc_ohc=njmSzJq0HE8AX_RWY6P&_nc_ht=scontent.fbma2-1.fna&oh=ae2a9a187954f17fe489be1522d04e9e&oe=60448624"
-                         class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
-                </div>
+            <!--<div class="sb-sidenav-menu">-->
+                <!--<div class="profile-userpic">-->
+                    <!--<img src="https://scontent.fbma2-1.fna.fbcdn.net/v/t1.0-9/17796707_10155264022745159_8129848447376750595_n.jpg?_nc_cat=111&ccb=2&_nc_sid=174925&_nc_ohc=njmSzJq0HE8AX_RWY6P&_nc_ht=scontent.fbma2-1.fna&oh=ae2a9a187954f17fe489be1522d04e9e&oe=60448624"-->
+                         <!--class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">-->
+                <!--</div>-->
 
-                <div class="profile-usertitle">
-                    <div class="profile-usertitle-name">
-                        {{userData.firstName}}
-                        <div class="profile-usertitle-name">
-                            {{userData.lastName}}
-                            <div class="profile-usertitle-name">
-                                {{userData.email}}
-                                <div class="profile-usertitle-job">
-                                    {{userData.mobileNr}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <!--<div class="profile-usertitle">-->
+                    <!--<div class="profile-usertitle-name">-->
+                        <!--{{userData.firstName}}-->
+                        <!--<div class="profile-usertitle-name">-->
+                            <!--{{userData.lastName}}-->
+                            <!--<div class="profile-usertitle-name">-->
+                                <!--{{userData.email}}-->
+                                <!--<div class="profile-usertitle-job">-->
+                                    <!--{{userData.mobileNr}}-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
 
-                    <div class="profile-userbuttons">
-                    </div>
-                    <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Admin</div>
-                        <a class="nav-link" href="http://localhost:8888/User">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Dashboard
-                        </a>
-                        <a class="nav-link" href="http://localhost:8888/User/Checkout">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Cart
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="sb-sidenav-footer">
-                <a data-toggle="modal" data-target="#editModal">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                         class="bi bi-gear" viewBox="0 0 16 16">
-                        <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
-                        <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
-                    </svg>
-                </a>
-            </div>
+                    <!--<div class="profile-userbuttons">-->
+                    <!--</div>-->
+                    <!--<div class="nav">-->
+                        <!--<div class="sb-sidenav-menu-heading">Admin</div>-->
+                        <!--<a class="nav-link" href="http://localhost:8888/User">-->
+                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
+                            <!--Dashboard-->
+                        <!--</a>-->
+                        <!--<a class="nav-link" href="http://localhost:8888/User/Checkout">-->
+                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
+                            <!--Cart-->
+                        <!--</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="sb-sidenav-footer">-->
+                <!--<a data-toggle="modal" data-target="#editModal">-->
+                    <!--<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"-->
+                         <!--class="bi bi-gear" viewBox="0 0 16 16">-->
+                        <!--<path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>-->
+                        <!--<path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>-->
+                    <!--</svg>-->
+                <!--</a>-->
+            <!--</div>-->
         </nav>
     </div>
 
@@ -145,6 +145,7 @@
                                         <small class="text-muted">Quantity: {{quantity}}</small>
                                     </div>
                                     <span class="text-muted">Price: {{price}}</span>
+                                    <button type="button" class="btn btn-danger">Danger</button>
                                 </li>
                                 {{/userCart}}
                                 <li class="list-group-item d-flex justify-content-between lh-condensed">
@@ -174,7 +175,7 @@
                         </div>
                         <div class="col-md-8 order-md-1">
                             <h4 class="mb-3">Billing address</h4>
-                            <form class="needs-validation" novalidate method="POST" action="/User/createOrder">
+                            <form class="needs-validation" novalidate method="POST" action="/Index/createOrder">
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <label for="firstName">First name</label>
