--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -15,7 +15,7 @@
 </head>
 <body class="sb-nav-fixed">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="admin.html">Start Bootstrap</a>
+    <a class="navbar-brand" href="/Index">Pikto</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
     </button>
     <!-- Navbar Search-->
@@ -74,7 +74,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <a class="nav-link" href="http://localhost:8888/User/Checkout">
+                        <a class="nav-link" href="http://localhost:8888/Index/Checkout/{{sessionId}}">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Cart
                         </a>
