--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -283,7 +283,7 @@ footer {
                     </svg>
                 </a></li>
 
-                 <li id="loggedintrue" style="display:none;"><a href="http://localhost:8888/User/Checkout/{{userData.userId}}">
+                 <li id="loggedintrue" style="display:none;"><a href="http://localhost:8888/User/Checkout">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                          class="bi bi-cart-fill"viewBox="0 0 16 16">
                         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -291,12 +291,9 @@ footer {
                 </a></li>
 
 
-                <a href="http://localhost:8888/User/{{userData.userId}}"><li class="loggedIn" style="display:none;" id="true"> <i class='fas fa-user-alt'  style='font-size:17px;'></i></li></a>
+                <a href="http://localhost:8888/User"><li class="loggedIn" style="display:none;" id="true"> <i class='fas fa-user-alt'  style='font-size:17px;'></i></li></a>
 
                <a href="http://localhost:8888/login"><li class="{{loggedIn}}" id="login"> <i class='fas fa-user-alt'  style='font-size:17px;'></i></li></a>
-
-
-
             </ul>
         </div>
     </nav>
