--- a/src/main/resources/templates/Frontend/Main/ProductPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/ProductPage.mustache
@@ -151,9 +151,9 @@
                                             <h4 class="price">price: <span>{{Product.price}}</span></h4>
                                           
                                             <div class="action">
-                                                <button class="add-to-cart btn btn-default" type="button">add to cart
-                                                </button>
-                                                <button class="like btn btn-default" type="button"><span></button>
+                                                <form action="/Index/addToCart/{{Product.productId}}">
+                                                    <button class="like btn btn-default" type="submit">Add to cart</button>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
