--- a/src/main/resources/templates/Frontend/Admin/Reviews.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Reviews.mustache
@@ -8,7 +8,7 @@
     <meta name="author" content=""/>
     <title>Dashboard - Admin</title>
     <link href="/css/User/userstyles.css" rel="stylesheet"/>
-    <!--<link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"-->
+    <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
 
