--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -12,22 +12,42 @@
           crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
+
+            
+   <style>
+ .logo {
+            line-height: 60px;
+            float: left;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
+
+        .sb-sidenav-dark .sb-sidenav-menu .nav-link {
+    color: white;
+}
+
+.bg-dark {
+    background-color: black;
+}
+   </style>
 </head>
-<body class="sb-nav-fixed">
-<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="admin.html">Start Bootstrap</a>
-    <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
-    </button>
-    <!-- Navbar Search-->
-    <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search"
-                   aria-describedby="basic-addon2"/>
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
-            </div>
+  <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+
+ <div class="logo" >
+     <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100"/></a>
         </div>
-    </form>
+          
+            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
+        <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
+          <button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">
+           Log out
+        </button>
+        </div>
+        </nav>
     <!-- Navbar-->
     <ul class="navbar-nav ml-auto ml-md-0">
         <li class="nav-item dropdown">
@@ -48,28 +68,21 @@
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-            <div class="sb-sidenav-menu">
+               <div class="sb-sidenav-menu">
+
                 <div class="profile-userpic">
-                    <img src="https://scontent.fbma2-1.fna.fbcdn.net/v/t1.0-9/17796707_10155264022745159_8129848447376750595_n.jpg?_nc_cat=111&ccb=2&_nc_sid=174925&_nc_ohc=njmSzJq0HE8AX_RWY6P&_nc_ht=scontent.fbma2-1.fna&oh=ae2a9a187954f17fe489be1522d04e9e&oe=60448624"
-                         class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
+                    <img src="{{userData.pictureUrl}}" class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
-                        {{userData.firstName}}
-                        <div class="profile-usertitle-name">
-                            {{userData.lastName}}
-                            <div class="profile-usertitle-name">
-                                {{userData.email}}
-                                <div class="profile-usertitle-job">
-                                    {{userData.mobileNr}}
-                                </div>
-                            </div>
-                        </div>
+                        {{userData.firstName}} {{userData.lastName}}
                     </div>
                     <div class="profile-userbuttons">
                     </div>
+                    <div style="background-color:white; width:100%; height:0.3em; margin-top:50px;">
+                     
+                    </div>
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Admin</div>
                         <a class="nav-link" href="http://localhost:8888/User">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
@@ -78,12 +91,17 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Cart
                         </a>
+                        <a class="nav-link" href="http://localhost:8888/User/Purchases">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Purchased images
+                        </a>
                     </div>
                 </div>
-                <div class="sb-sidenav-footer">
-                    <div class="small">Logged in as:</div>
-                    {{userData.email}}
-                </div>
+               <div class="sb-sidenav-footer">
+                      <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>
+
+                    </div>
+
             </div>
         </nav>
     </div>
@@ -330,6 +348,92 @@
             </div>
         </footer>
     </div>
+    
+<div class="modal" tabindex="-1" role="dialog" id="editModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit User</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <form method="POST" action="/Admin/updateUser" novalidate>
+                   <div class="form-group row">
+                        <label for="userId" class="col-4 col-form-label">User id</label>
+                        <div class="col-8">
+                            <input id="userId" name="userId" type="text" class="form-control" value="{{userData.userId}}" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="title" class="col-4 col-form-label">Firstname</label>
+                        <div class="col-8">
+                            <input id="Firstname" name="firstName" type="text" class="form-control" value="{{userData.firstName}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="summary" class="col-4 col-form-label">Lastname</label>
+                        <div class="col-8">
+                            <input id="Lastname" name="lastName" type="text" class="form-control" value="{{userData.lastName}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="mobileNr" class="col-4 col-form-label">Phonenumber</label>
+                        <div class="col-8">
+                            <input id="mobileNr" name="mobileNr" type="text" class="form-control" value="{{userData.mobileNr}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="email" class="col-4 col-form-label">Email</label>
+                        <div class="col-8">
+                            <input id="email" name="email" type="text" class="form-control" value="{{userData.email}}">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="pictureUrl" class="col-4 col-form-label">Profilepicture</label>
+                        <div class="col-8">
+                            <input id="pictureUrl" name="pictureUrl" type="text" class="form-control" value="{{userData.pictureUrl}}">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+            </div>
+
+   <div style="background-color:black; width:100%; height:0.7em;">
+                     
+                    </div>
+             <div class="modal-header">
+                <h5 class="modal-title">Change password</h5>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <form method="POST" action="/Admin/updateUser" novalidate>
+                   <div class="form-group row">
+                        <label for="userId" class="col-4 col-form-label">Old password</label>
+                        <div class="col-8">
+                            <input id="userId" name="userId" type="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="title" class="col-4 col-form-label">New password</label>
+                        <div class="col-8">
+                            <input id="Firstname" name="firstName" type="password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="summary" class="col-4 col-form-label">New password</label>
+                        <div class="col-8">
+                            <input id="Lastname" name="lastName" type="password" class="form-control">
+                        </div>
+                    </div>       
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+            </div>
+
 </div>
 <script src="/js/Admin/jquery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
